Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1123,12 +1123,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'City': 'Buenos Aires',\n",
+       "  'Country': 'Argentina',\n",
+       "  'Population': 2891,\n",
+       "  'Area': 203}]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_values = [cities[0]]\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}\n",
+    "text_values"
    ]
   },
   {
