--- a/index.ipynb
+++ b/index.ipynb
@@ -1123,22 +1123,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Buenos Aires']"
+       "(['Buenos Aires'], 'Toronto')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_values = [cities[0]['City']], cities[1]['c']\n",
+    "text_values = [cities[0]['City']], cities[1]['City']]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}\n",
     "text_values"
    ]
