--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2056,13 +2056,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "area_values = cities[0]['Area'], cities[1]['Area'], cities[2]['Area']\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': [text_values]}"
    ]
   },
   {
