--- a/index.ipynb
+++ b/index.ipynb
@@ -1138,7 +1138,7 @@
     }
    ],
    "source": [
-    "text_values = cities[0]['City'], cities[1]['City'], cities[2]['City']\n",
+    "text_values = [\"Buenos \"]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}\n",
     "text_values"
    ]
