Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1138,7 +1138,7 @@
     }
    ],
    "source": [
-    "text_values = [\"Buenos \"]\n",
+    "text_values = [\"Buenos Aires\",\"Tornoto\", \"\"]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}\n",
     "text_values"
    ]
